--- a/src/menu/app/src/main/res/values/strings.xml
+++ b/src/menu/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MENU - Seoul RnD</string>
     <string name="action_settings">Settings</string>
+    <string name="option_text">서울R<![CDATA[&]]>D지원센터\nIP센터\n무선(사) 서비스전략그룹\n창의 개발 센터</string>
+    <string name="title">서울 R<![CDATA[&]]>D MENU</string>
 </resources>
