Apply Google Analytics

--- a/src/menu/app/src/main/res/values-ko/strings.xml
+++ b/src/menu/app/src/main/res/values-ko/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">서울캠퍼스 식단</string>
+    <string name="app_name">서울 R<![CDATA[&]]>D MENU</string>
     <string name="action_settings">설정</string>
 </resources>
