--- a/src/menu/app/src/main/res/values-ko/strings.xml
+++ b/src/menu/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">오늘 머먹지? - 서울 R&D 캠퍼스</string>
+    <string name="app_name">오늘 머먹지? - 서울 R<![CDATA[&]]>D 캠퍼스</string>
     <string name="action_settings">Settings</string>
     <string name="option_text">서울R<![CDATA[&]]>D지원센터\nIP센터\n무선(사) 서비스전략그룹\n창의 개발 센터</string>
     <string name="menu_title">오늘 머먹지?</string>
